fixing widget thumbnail spacing

--- a/scss/components-dev/_content-box.scss
+++ b/scss/components-dev/_content-box.scss
@@ -23,8 +23,8 @@
 
   .post-date {
     color: $grey-text-color;
-    padding: 5px 0;
-    font-size: 90%
+    padding: 0 0 1.2em;
+    font-size: 90%;
   }
 
   h2.homeheader, h3.homeheader {
@@ -35,6 +35,10 @@
 
   h3.homeheader {
     margin: 20px 0 10px;
+  }
+  .lead {
+    margin: 0.5em 0 0.7em;
+    font-size: 1.5em;
   }
 }
 
