--- a/scss/templates/_wp-widgets.scss
+++ b/scss/templates/_wp-widgets.scss
@@ -30,9 +30,9 @@
     p {
     	font-size: 13px;
     	font-size: 0.928571429rem;
-    	line-height: 1.846153846;
+    	line-height: 1.5;
     	margin: 0;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.3rem;
     }
   }
   .widget_rss {
